--- a/core/templates/shop/product-detail.html
+++ b/core/templates/shop/product-detail.html
@@ -75,9 +75,10 @@
             <div class="d-flex justify-content-between">
 
                 <!-- Rating -->
-                <a class="d-flex gap-1 mb-4" href="#reviewSection">
+                <a class="d-inline-flex align-items-center mb-3" href="#">
                     {% for i in "12345" %}
-                    {% if i|add:0 <= object.avg_rate %} <span><i class="bi bi-star-fill star-rate"></i></span>
+                    {% if i|add:0 <= object.avg_rate %} <span><i
+                        class="bi bi-star-fill star-rate"></i></span>
                     {% else %}
                     <span><i class="bi bi-star star-rate"></i></span>
                     {% endif %}
@@ -312,14 +313,17 @@
                                 <div class="flex-grow-1 me-3">
                                     <!-- Rating -->
                                     <div class="d-flex gap-1 small">
-                                        {% for i in "12345" %}
-                                        {% if i|add:0 <= object.avg_rate %} <span><i
-                                            class="bi bi-star-fill star-rate"></i></span>
-                                        {% else %}
-                                        <span><i class="bi bi-star star-rate"></i></span>
-                                        {% endif %}
+                                        <a class="d-inline-flex align-items-center mb-3" href="#">
+                                            {% for i in "12345" %}
+                                            {% if i|add:0 <= object.avg_rate %} <span><i
+                                                    class="bi bi-star-fill star-rate"></i></span>
+                                                {% else %}
+                                                <span><i class="bi bi-star star-rate"></i></span>
+                                                {% endif %}
 
-                                        {% endfor %}
+                                                {% endfor %}
+                                                <span class="ms-1">{{object.avg_rate}}/5</span>
+                                        </a>
                                     </div>
                                     <!-- End Rating -->
                                     <span class="text-white">{{reviews.count}} نظر</span>
@@ -465,49 +469,44 @@
 
 
                 <ul class="list-comment list-comment-divider mb-5">
-                     {% for review in reviews %}
-                    <li class="list-comment-item">
+                  {% for review in reviews %}
+                    {% if review.status == 2 %}
+                      <li class="list-comment-item">
+
                         <!-- ستاره‌ها -->
                         <div class="d-flex gap-1 mb-3">
-                            {% for _ in review.rate|times %}
-                              <img src="{% static 'svg/illustrations/star.svg' %}" width="16">
-                            {% endfor %}
+                          {% for _ in review.rate|times %}
+                            <img src="{% static 'svg/illustrations/star.svg' %}" width="16">
+                          {% endfor %}
                         </div>
 
                         <!-- کاربر -->
                         <div class="d-flex align-items-center mb-3">
-                            <div class="flex-shrink-0">
-                                <img class="avatar avatar-sm avatar-circle" src="{{ review.user.user_profile.image.url }}">
+                          <div class="flex-shrink-0">
+                            <img class="avatar avatar-sm avatar-circle" src="{{ review.user.user_profile.image.url }}">
+                          </div>
+                          <div class="flex-grow-1 ms-3">
+                            <div class="d-flex justify-content-between align-items-center">
+                              <h5 class="mb-0">{{ review.user.user_profile.get_fullname }}</h5>
+                              <span class="small text-muted">{{ review.created_date|date:"Y-m-d H:i" }}</span>
                             </div>
-                            <div class="flex-grow-1 ms-3">
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <h5 class="mb-0">{{ review.user.user_profile.get_fullname }}</h5>
-                                    <span class="small text-muted">{{ review.created_date|date:"Y-m-d H:i" }}</span>
-                                </div>
-                            </div>
+                          </div>
                         </div>
 
                         <!-- متن نظر -->
                         <div class="mb-5">
-                            <p>{{ review.description }}</p>
+                          <p>{{ review.description }}</p>
                         </div>
 
                         <div class="mb-2">
-                            <span class="text-dark fw-semibold">{{ review.user.user_profile.first_name }}</span> - خرید تایید شده
+                          <span class="text-dark fw-semibold">{{ review.user.user_profile.first_name }}</span> - خرید تایید شده
                         </div>
 
-<!--                        &lt;!&ndash; رأی‌دهی &ndash;&gt;-->
-<!--                        <div class="d-flex align-items-center">-->
-<!--                            <span class="small me-2">آیا این مفید بود؟</span>-->
-<!--                            <div class="d-flex gap-2">-->
-<!--                                <a class="btn btn-white btn-xs" href="javascript:;">Yes</a>-->
-<!--                                <a class="btn btn-white btn-xs" href="javascript:;">نه</a>-->
-<!--                            </div>-->
-<!--                        </div>-->
-                    </li>
-                    {% empty %}
+                      </li>
+                    {% endif %}
+                  {% empty %}
                     <li>هنوز نظری ثبت نشده 🤷‍♂️</li>
-                    {% endfor %}
+                  {% endfor %}
                 </ul>
 
                 <!-- دکمه ثبت نظر -->
