--- a/core/templates/shop/product-grid.html
+++ b/core/templates/shop/product-grid.html
@@ -225,19 +225,18 @@
                         </div>
 
                         <div class="card-footer pt-0">
-                            <!-- Rating -->
-                            <!--                            <a class="d-inline-flex align-items-center mb-3" href="#">-->
-                            <!--                                {% for i in "12345" %}-->
-                            <!--                                {% if i|add:0 <= object.avg_rate %} <span><i-->
-                            <!--                                    class="bi bi-star-fill star-rate"></i></span>-->
-                            <!--                                {% else %}-->
-                            <!--                                <span><i class="bi bi-star star-rate"></i></span>-->
-                            <!--                                {% endif %}-->
+                            <a class="d-inline-flex align-items-center mb-3" href="#">
+                                {% for i in "12345" %}
+                                {% if i|add:0 <= object.avg_rate %} <span><i
+                                        class="bi bi-star-fill star-rate"></i></span>
+                                    {% else %}
+                                    <span><i class="bi bi-star star-rate"></i></span>
+                                    {% endif %}
 
-                            <!--                                {% endfor %}-->
-                            <!--                                <span class="ms-1">{{object.avg_rate}}/5</span>-->
-                            <!--                            </a>-->
-                            <!-- End Rating -->
+                                    {% endfor %}
+                                    <span class="ms-1">{{object.avg_rate}}/5</span>
+                            </a>
+
 
                             {% if user.is_authenticated %}
                             <a type="button" class="btn btn-outline-primary btn-sm btn-transition rounded-pill"
@@ -484,36 +483,36 @@
         });
     }
 
-    function addToWishlist_1(element,product_id) {
+    function addToWishlist_1(element, product_id) {
 
-            //console.log(product_id)
-            $.ajax({
-                url: "{%  url 'shop:add-to-wishlist' %}",
-                method: 'POST',
-                data: {
-                    product_id: product_id,
-                    csrfmiddlewaretoken: '{{ csrf_token }}'
+        //console.log(product_id)
+        $.ajax({
+            url: "{%  url 'shop:add-to-wishlist' %}",
+            method: 'POST',
+            data: {
+                product_id: product_id,
+                csrfmiddlewaretoken: '{{ csrf_token }}'
 
-                },
-                success: function (response) {
+            },
+            success: function (response) {
 
-                    Toastify({
-                        text:response.message,
-                        className: `info`,
-                        style: {
-                          background: "blue",
-                        }
-                      }).showToast();
-                    $(element).toggleClass('active');
+                Toastify({
+                    text: response.message,
+                    className: `info`,
+                    style: {
+                        background: "blue",
+                    }
+                }).showToast();
+                $(element).toggleClass('active');
 
-                    // do something with the response data
-                },
-                error: function (jqXHR, textStatus, errorThrown) {
-                    console.log(errorThrown);
-                    // handle the error case
-                }
-            });
-        }
+                // do something with the response data
+            },
+            error: function (jqXHR, textStatus, errorThrown) {
+                console.log(errorThrown);
+                // handle the error case
+            }
+        });
+    }
 
 
 </script>
